1) Inventory Issues fixed 2) Added edit option for prtdiscount, mrp, offerprice in Order update page 3) Ledger issues fixed

--- a/src/app/dashboards/dashboard.html
+++ b/src/app/dashboards/dashboard.html
@@ -24,15 +24,15 @@
                                 </ul>
                                 <div class="tab-content padding-top-20">
                                     <div class="tab-pane active" id="a1" role="tabpanel">
-                                        <select aria-controls="example1" class="form-control input-sm margin-bottom-10 width-auto">
+                                        <!-- <select aria-controls="example1" class="form-control input-sm margin-bottom-10 width-auto">
                                             <option value="10">Last Day</option>
                                             <option value="25">Last 7 Days</option>
                                             <option value="50">Last Month</option>
                                             <option value="100">Last 3 Months</option>
-                                        </select>
-                                        <div class="cui-ecommerce-dashboard-info__chart">
+                                        </select> -->
+                                        <!-- <div class="cui-ecommerce-dashboard-info__chart">
                                             <div class="chart-area-1 height-200 chartist"></div>
-                                        </div>
+                                        </div> -->
                                         <div class="row">
                                             <div class="col-lg-3">
                                                 <div class="cui-ecommerce-dashboard-info">
