--- a/src/app/sales-list/sales-list.html
+++ b/src/app/sales-list/sales-list.html
@@ -219,7 +219,7 @@
                                     PTR DISCOUNT
                                 </td>
                                 <td>
-                                    <input type="number" ng-model="modalDetials.ptrDiscount">
+                                    {{modalDetials.ptrDiscount}}
                                 </td>
                             </tr>
                             <tr>
@@ -227,7 +227,7 @@
                                     FREE OFFER (PTR)
                                 </td>
                                 <td>
-                                    <input type="text" ng-model="modalDetials.free">
+                                    {{modalDetials.free}}
                                 </td>
                             </tr>
 
@@ -288,7 +288,7 @@
                                     PTR DISCOUNT
                                 </td>
                                 <td>
-                                    <input type="text" ng-model="modalDetials.ptrDiscount">
+                                    <input type="number" ng-model="modalDetials.ptrDiscount">
                                 </td>
                             </tr>
                             <tr>
@@ -296,7 +296,7 @@
                                     FREE OFFER (PTR)
                                 </td>
                                 <td>
-                                    <input type="text" ng-model="modalDetials.free">
+                                    <input type="number" ng-model="modalDetials.free">
                                 </td>
                             </tr>
 
