--- a/src/app/orders/orderhistory.html
+++ b/src/app/orders/orderhistory.html
@@ -77,12 +77,10 @@
                             </td>
 
                             <td>{{order.order_total | currency:currency}}</td>
-                            <td>{{order.orderDate | date : 'yyyy-MM-dd'}}</td>
+                            <td>{{order.orderDate | date : 'yyyy-MM-dd' }}</td>
                             <td>
                                 <button type="button" class="btn btn-primary btn-md margin-inline" data-toggle="modal"
-                                    data-target="#orderData" ng-click="editBatchExpiry(order.id);"> Edit
-                                </button>
-                                <button type="button" class="btn btn-primary margin-inline"> View {{order.sales.length}}
+                                    data-target="#orderData" ng-click="editBatchExpiry(order.id);"> Edit {{order.sales.length}}
                                 </button>
                             </td>
                         </tr>
@@ -126,7 +124,7 @@
                                 <th>Price</th>
                                 <th>Tax</th>
                                 <th>Quantity</th>
-                                <th>Delete</th>
+                                <th ng-hide="order.sales.length === 1">Delete</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -137,8 +135,8 @@
                                 <td style="width: 20%;"><input type="number" class="form-control" name="quantity"
                                         ng-model="sale.order_quantity"></td>
                                 <!-- <td>{{sale.order_quantity}}</td> -->
-                                <td style="padding: 10px;"><button type="button" 
-                                    ng-click="removeItem(sale)" ng-disabled="order.sales.length ===1" 
+                                <td style="padding: 10px;" ng-hide="order.sales.length === 1" ><button type="button" 
+                                    ng-click="removeItem(sale)" 
                                     class="icmn-bin"></button></td>
                             </tr>
                         </tbody>
